# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2024 Intel Corporation

sources = files(
        'rte_sampler.c',
        'rte_sampler_eventdev.c',
        'rte_sampler_sink_file.c',
        'rte_sampler_sink_ringbuffer.c',
        'rte_sampler_sink_ctf.c',
)
headers = files(
        'rte_sampler.h',
        'rte_sampler_eventdev.h',
        'rte_sampler_sink_file.h',
        'rte_sampler_sink_ringbuffer.h',
        'rte_sampler_sink_ctf.h',
)
deps += ['eventdev']
